--- a/app/views/profiles/edit.html.slim
+++ b/app/views/profiles/edit.html.slim
@@ -1,8 +1,8 @@
 .container
   = form_for(current_user.profile, url: profile_path(current_user), html: { multipart: true, class: 'form-group' }, method: :put) do |f|
-    = f.text_field :name, class: 'form-control'
-    = f.file_field :avatar, class: 'form-control'
-    = f.text_field :twitter, placeholder: 'twitter'
-    = f.text_field :github, placeholder: 'github'
-    = f.text_field :livecodingtv, placeholder: 'livecodingtv'
+    = f.text_field :name,         class: 'form-control', placeholder: 'name'
+    = f.file_field :avatar,       class: 'form-control'
+    = f.text_field :twitter,      class: 'form-control', placeholder: 'twitter'
+    = f.text_field :github,       class: 'form-control', placeholder: 'github'
+    = f.text_field :livecodingtv, class: 'form-control', placeholder: 'livecodingtv'
     = f.submit t('profile.submit'), class: 'btn btn-primary'
