--- a/app/views/profiles/edit.html.slim
+++ b/app/views/profiles/edit.html.slim
@@ -1,8 +1,18 @@
-.container
-  = form_for(current_user.profile, url: profile_path(current_user), html: { multipart: true, class: 'form-group' }, method: :put) do |f|
-    = f.text_field :name,         class: 'form-control', placeholder: 'name'
-    = f.file_field :avatar,       class: 'form-control'
-    = f.text_field :twitter,      class: 'form-control', placeholder: 'twitter'
-    = f.text_field :github,       class: 'form-control', placeholder: 'github'
-    = f.text_field :livecodingtv, class: 'form-control', placeholder: 'livecodingtv'
-    = f.submit t('profile.submit'), class: 'btn btn-primary'
+.container= form_for(current_user.profile, url: profile_path(current_user), html: { multipart: true, class: 'form-group' }) do |f|
+  = f.label :sex,                 class: 'form-control'
+  = f.select :sex,                options_for_select([['Male', 0 ], ['Female', 1 ]], current_user.profile.sex), {}, class: 'form-control'
+  = f.label :name,                class: 'form-control'
+  = f.text_field :name,           class: 'form-control', placeholder: 'name'
+  = f.label :avatar,              class: 'form-control'
+  = f.file_field :avatar,         class: 'form-control'
+  = f.label :skype,               class: 'form-control'
+  = f.text_field :skype,          class: 'form-control', placeholder: 'skype'
+  = f.label :twitter,             class: 'form-control'
+  = f.text_field :twitter,        class: 'form-control', placeholder: 'twitter'
+  = f.label :github,              class: 'form-control'
+  = f.text_field :github,         class: 'form-control', placeholder: 'github'
+  = f.label :livecodingtv,        class: 'form-control'
+  = f.text_field :livecodingtv,   class: 'form-control', placeholder: 'livecodingtv'
+  = f.label "I'm from ",  class: 'form-control'
+  = f.select :born_country,       options_for_select(@countries, current_user.profile.born_country), {},  class: 'form-control'
+  = f.submit t('profile.submit'), class: 'btn btn-primary'
