--- a/app/views/profiles/new.html.slim
+++ b/app/views/profiles/new.html.slim
@@ -1,7 +1,18 @@
-= form_for(@profile, url: profile_path(current_user), html: { multipart: true }) do |f|
-  = f.text_field :name,         placeholder: 'name'
-  = f.file_field :avatar
-  = f.text_field :twitter,      placeholder: 'twitter'
-  = f.text_field :github,       placeholder: 'github'
-  = f.text_field :livecodingtv, placeholder: 'livecodingtv'
-  = f.submit t('profile.avatar.new')
+.container= form_for(@profile, url: profile_path(current_user), html: { multipart: true }) do |f|
+  = f.label :sex,                     class: 'form-control'
+  = f.select :sex,                    [['Male', 0 ], ['Female', 1 ]], {}, class: 'form-control'
+  = f.label :name,                    class: 'form-control'
+  = f.text_field :name,               class: 'form-control', placeholder: 'name'
+  = f.label :avatar,                  class: 'form-control'
+  = f.file_field :avatar,             class: 'form-control'
+  = f.label :skype,                   class: 'form-control'
+  = f.text_field :skype,              class: 'form-control', placeholder: 'skype'
+  = f.label :twitter,                 class: 'form-control'
+  = f.text_field :twitter,            class: 'form-control', placeholder: 'twitter'
+  = f.label :github,                  class: 'form-control'
+  = f.text_field :github,             class: 'form-control', placeholder: 'github'
+  = f.label :livecodingtv,            class: 'form-control'
+  = f.text_field :livecodingtv,       class: 'form-control', placeholder: 'livecodingtv'
+  = f.label "I'm from ",      class: 'form-control'
+  = f.select :born_country,           options_for_select(@countries), {},  class: 'form-control'
+  = f.submit t('profile.submit'), class: 'btn btn-primary'
