--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,7 +9,10 @@ html
 
   body
     - if user_signed_in?
-      = render 'layouts/nav'
-    / p.notice= notice
-    / p.alert= alert
+      header.navbar.navbar-inverse
+        .container= render 'layouts/nav'
+    - unless notice.nil?
+      p.notice= notice
+    - unless alert.nil?
+      p.alert= alert
     = yield
