--- a/app/views/profiles/show.html.slim
+++ b/app/views/profiles/show.html.slim
@@ -1,12 +1,28 @@
-- unless @user.profile.nil?
-  p= @user.profile.name
-  p= @user.profile.twitter
-  p= @user.profile.github
-  p= @user.profile.livecodingtv
-  = image_tag @user.profile.avatar.url(:medium), id: 'profile'
-
-- if @user == current_user
-  - if current_user.profile.nil?
-    = link_to t('profile.avatar.new'), new_profile_path(@user), class: 'btn btn-success'
-  - else
-    = link_to t('profile.edit'), edit_profile_path(current_user), class: 'btn btn-primary'
+.container
+  .row
+    .col-xs-3
+      .card
+        .card-height-indicator
+        .card-content
+          .card-image style='display: inline;'
+            - unless @user.profile.nil?
+              = image_tag @user.profile.avatar.url(:medium), class: 'thumbnail', id: 'profile'
+  .row
+    .col-sm-3
+      - if @user == current_user
+        = link_to t('profile.edit'), manage_profile_path, class: 'btn btn-primary'
+      - unless @user.profile.nil?
+        h3= username
+        - if @user.profile.skype.present?
+          = link_to "skype:#{@user.profile.skype}?chat" do
+            = fa_icon 'skype', class: 'fa-3x social'
+        - if @user.profile.twitter.present?
+          = link_to "https://twitter.com/#{@user.profile.twitter}", target: '_blank' do
+            = fa_icon 'twitter', class: 'fa-3x social'
+        - if @user.profile.github.present?
+          = link_to "https://github.com/#{@user.profile.github}", target: '_blank' do
+            = fa_icon 'github-alt', class: 'fa-3x social'
+        - if @user.profile.livecodingtv.present?
+          = link_to "https://livecoding.tv/#{@user.profile.livecodingtv}", target: '_blank' do
+            = fa_icon 'desktop', class: 'fa-3x livecodingtv'
+        h4= "I'm from #{Country.find(@user.profile.born_country).name}"
