--- a/app/views/profiles/show.html.slim
+++ b/app/views/profiles/show.html.slim
@@ -25,4 +25,5 @@
         - if @user.profile.livecodingtv.present?
           = link_to "https://livecoding.tv/#{@user.profile.livecodingtv}", target: '_blank' do
             = fa_icon 'desktop', class: 'fa-3x livecodingtv'
-        h4= "I'm from #{Country.find(@user.profile.born_country).name}"
+        h4= "I'm from #{@user.profile.born_country}"
+        h4= "Status: #{@user.profile.status}"
