--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,5 +1,6 @@
 /*
  *= require bootstrap/dist/css/bootstrap.min
+ *= require sweet-alert
  *= require font-awesome
  *= require bootstrap-material-design/dist/css/material.min
  *= require bootstrap-material-design/dist/css/ripples.min
