--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -12,4 +12,4 @@
             .card-content
               .card-image style='display: inline;'
                 = link_to profile_path(user) do
-                  = gravatar_tag user.email, class: 'thumbnail', id: 'profile'
+                  = gravatar_tag user.email, :default, secure: true, class: 'thumbnail', id: 'profile'
