--- a/app/views/users/pending_requests.html.slim
+++ b/app/views/users/pending_requests.html.slim
@@ -8,7 +8,7 @@
             .card-image style='display: inline;'
               - unless p_req.profile.nil?
                 = link_to profile_path(p_req) do
-                  = image_tag p_req.profile.avatar.url(:thumb), class: 'thumbnail'
+                  = gravatar_tag p_req.email, :default, secure: true, class: 'thumbnail'
                   p= link_to p_req.profile.name, profile_path(p_req)
             = link_to 'Accept', accept_request_user_path(p_req), class: 'btn btn-success btn-xs'
             = link_to 'Decline', '#', class: 'btn btn-danger btn-xs'
