--- a/app/views/layouts/_nav.html.slim
+++ b/app/views/layouts/_nav.html.slim
@@ -14,5 +14,6 @@
       ul.dropdown-menu
         li= link_to 'Check', profile_path(current_user)
         li= link_to 'Edit',  manage_profile_path
+        li= link_to 'Update Email', edit_user_registration_path
         li.divider
         li= link_to 'Sign out', '#'
