--- a/app/views/profiles/show.html.slim
+++ b/app/views/profiles/show.html.slim
@@ -18,7 +18,7 @@
         - if current_user.friends_with?(@user) || @user == current_user || current_user.requested_friends.include?(@user)
           - if current_user.requested_friends.include?(@user)
             = link_to 'Accept', accept_request_user_path(@user), class: 'btn btn-success btn-xs'
-            = link_to 'Decline', '#', class: 'btn btn-danger btn-xs'
+            = link_to 'Decline', decline_request_user_path(@user), class: 'btn btn-danger btn-xs'
           - if @user.profile.skype.present?
             = link_to "skype:#{@user.profile.skype}?call" do
               = fa_icon 'skype', class: 'fa-3x social'
