--- a/app/views/profiles/edit.html.slim
+++ b/app/views/profiles/edit.html.slim
@@ -13,6 +13,8 @@
   = f.text_field :twitter,        class: 'form-control', placeholder: 'twitter'
   = f.label :github,              class: 'form-control'
   = f.text_field :github,         class: 'form-control', placeholder: 'github'
+  = f.label :bitbucket,           class: 'form-control'
+  = f.text_field :bitbucket,      class: 'form-control', placeholder: 'bitbucket'
   = f.label :livecodingtv,        class: 'form-control'
   = f.text_field :livecodingtv,   class: 'form-control', placeholder: 'livecodingtv'
   = f.label "I'm from ",          class: 'form-control'
