--- a/app/views/profiles/edit.html.slim
+++ b/app/views/profiles/edit.html.slim
@@ -3,8 +3,8 @@
   = f.select :sex,                options_for_select([['Male', 0 ], ['Female', 1 ]], current_user.profile.sex), {}, class: 'form-control'
   = f.label :name,                class: 'form-control'
   = f.text_field :name,           class: 'form-control', placeholder: 'name'
-  = f.label :avatar,              class: 'form-control'
-  = f.file_field :avatar,         class: 'form-control'
+  = f.label :avatar, class: 'form-control'
+  = link_to t('profile.avatar.msg'), 'https://en.gravatar.com/', target: '_blank', class: 'form-control'
   = f.label :status,              class: 'form-control'
   = f.select :status,             options_for_select(@companies, current_user.profile.status), {}, class: 'form-control'
   = f.label :skype,               class: 'form-control'
