--- a/app/views/profiles/show.html.slim
+++ b/app/views/profiles/show.html.slim
@@ -48,3 +48,16 @@
           h4 Sent a Friend Request
         - else
           = link_to 'Send Friend Request', send_request_user_path(@user), class: 'btn btn-info f_req'
+  .row
+    - if current_user == @user || current_user.friends_with?(@user) || @user.profile.f_list_privacy
+      h2 Friends
+      - @user.friends.each do |friend|
+        .col-xs-3
+          .card
+            .card-height-indicator
+            .card-content
+              .card-image style='display: inline;'
+                - unless friend.profile.nil?
+                  = link_to profile_path(friend) do
+                    = gravatar_tag friend.email, :default, secure: true, class: 'thumbnail'
+                    h4= friend.profile.name
