--- a/app/views/profiles/show.html.slim
+++ b/app/views/profiles/show.html.slim
@@ -7,19 +7,29 @@
           .card-image style='display: inline;'
             - unless @user.profile.nil?
               #profile= gravatar_tag @user.email, :default, secure: true, class: 'thumbnail'
-      h4= "Signed in from #{@country}"
+    .col-xs-9
+      h3= username
+      h3= "Signed in from #{@country}"
+      - if current_user.friends_with?(@user) || @user == current_user || current_user.requested_friends.include?(@user)
+        - if @user.profile.born_country.present?
+          h3= "I'm from #{@user.profile.born_country}"
+        - if @user.profile.status.present?
+          h3= "Status: #{@user.profile.status}"
+        - if current_user.requested_friends.include?(@user)
+          = link_to 'Accept', accept_request_user_path(@user), class: 'btn btn-success btn-sm'
+          = link_to 'Decline', decline_request_user_path(@user), class: 'btn btn-danger btn-sm'
+      - elsif current_user.pending_friends.include?(@user)
+        h4 Sent a Friend Request
+      - else
+        = link_to 'Send Friend Request', send_request_user_path(@user), class: 'btn btn-info f_req'
   .row
     .col-sm-3
       - if @user == current_user
-        = link_to t('profile.edit'), manage_profile_path, class: 'btn btn-primary'
+        p= link_to t('profile.edit'), manage_profile_path, class: 'btn btn-primary'
         - if current_user.requested_friends.count > 0
-          = link_to "Pending Friend Request #{current_user.requested_friends.count}", pending_requests_user_path(current_user), class: 'btn btn-danger'
+          p= link_to "Pending Friend Request #{current_user.requested_friends.count}", pending_requests_user_path(current_user), class: 'btn btn-danger'
       - unless @user.profile.nil?
-        h3= username
         - if current_user.friends_with?(@user) || @user == current_user || current_user.requested_friends.include?(@user)
-          - if current_user.requested_friends.include?(@user)
-            = link_to 'Accept', accept_request_user_path(@user), class: 'btn btn-success btn-xs'
-            = link_to 'Decline', decline_request_user_path(@user), class: 'btn btn-danger btn-xs'
           - if @user.profile.skype.present?
             = link_to "skype:#{@user.profile.skype}?call" do
               = fa_icon 'skype', class: 'fa-3x social'
@@ -35,25 +45,18 @@
           - if @user.profile.livecodingtv.present?
             = link_to "https://livecoding.tv/#{@user.profile.livecodingtv}", target: '_blank' do
               = fa_icon 'desktop', class: 'fa-3x livecodingtv'
-          - if @user.profile.born_country.present?
-            h4= "I'm from #{@user.profile.born_country}"
-          - if @user.profile.status.present?
-            h4= "Status: #{@user.profile.status}"
           - unless @user.profile.languages.nil?
-            h4 I want to learn
-            ul
-              - @user.profile.languages.each do |lang|
-                li.programming= lang.name
-        - elsif current_user.pending_friends.include?(@user)
-          h4 Sent a Friend Request
-        - else
-          = link_to 'Send Friend Request', send_request_user_path(@user), class: 'btn btn-info f_req'
+            - if @user.profile.languages.count > 0
+              h4 I want to learn
+              ul
+                - @user.profile.languages.each do |lang|
+                  li.programming= lang.name
   .row
     - if current_user == @user || current_user.friends_with?(@user) || @user.profile.f_list_privacy
       h2 Friends
       - @user.friends.each do |friend|
         - unless friend.profile.nil?
-          .col-xs-3
+          .col-xs-2
             = link_to profile_path(friend) do
               .card
                 .card-height-indicator
