--- a/app/views/layouts/_nav.html.slim
+++ b/app/views/layouts/_nav.html.slim
@@ -4,16 +4,17 @@
     span.icon-bar
     span.icon-bar
   = link_to t('title'), root_path, class: 'navbar-brand'
-.navbar-collapse.collapse.navbar-responsive-collapse
-  ul.nav.navbar-nav.navbar-right
-    li.dropdown
-      = link_to '#', class: 'dropdown-toggle', data: { target: '#', toggle: 'dropdown' } do
-        = fa_icon 'user'
-        = "Your #{t('profile.link')} "
-        b.caret
-      ul.dropdown-menu
-        li= link_to 'Check', profile_path(current_user)
-        li= link_to 'Edit',  manage_profile_path
-        li= link_to 'Update Email', edit_user_registration_path
-        li.divider
-        li= link_to 'Sign out', destroy_user_session_path, method: :delete
+- if user_signed_in?
+  .navbar-collapse.collapse.navbar-responsive-collapse
+    ul.nav.navbar-nav.navbar-right
+      li.dropdown
+        = link_to '#', class: 'dropdown-toggle', data: { target: '#', toggle: 'dropdown' } do
+          = fa_icon 'user'
+          = "Your #{t('profile.link')} "
+          b.caret
+        ul.dropdown-menu
+          li= link_to 'Check', profile_path(current_user)
+          li= link_to 'Edit',  manage_profile_path
+          li= link_to 'Update Email', edit_user_registration_path
+          li.divider
+          li= link_to 'Sign out', destroy_user_session_path, method: :delete
