--- a/app/views/users/pending_requests.html.slim
+++ b/app/views/users/pending_requests.html.slim
@@ -1,8 +1,11 @@
 .container
   .row
+    .col-xs-12
+      h3 Pending Friend Requests
+  .row
     - @p_requests.each do |p_req|
       - unless p_req.profile.nil?
-        .col-xs-3
+        .col-xs-2
           = link_to profile_path(p_req) do
             .card
               .card-height-indicator
@@ -10,5 +13,3 @@
                 .card-image style='display: inline;'
                   = gravatar_tag p_req.email, :default, secure: true, class: 'thumbnail'
             h4= link_to p_req.profile.name, profile_path(p_req)
-          = link_to 'Accept', accept_request_user_path(p_req), class: 'btn btn-success btn-xs'
-          = link_to 'Decline', decline_request_user_path(p_req), class: 'btn btn-danger btn-xs'
