--- a/app/views/profiles/_github.html.slim
+++ b/app/views/profiles/_github.html.slim
@@ -1,3 +1,3 @@
-- if @user.profile.github.present?
+- if policy(@user).github?
   = link_to "https://github.com/#{@user.profile.github}", target: '_blank' do
     = fa_icon 'github-alt', class: 'fa-3x social'
