--- a/app/views/profiles/_lctv.html.slim
+++ b/app/views/profiles/_lctv.html.slim
@@ -1,3 +1,3 @@
-- if @user.profile.livecodingtv.present?
+- if policy(@user).lctv?
   = link_to "https://www.livecoding.tv/#{@user.profile.livecodingtv}", target: '_blank' do
     = fa_icon 'desktop', class: 'fa-3x livecodingtv'
