--- a/app/views/profiles/_skype.html.slim
+++ b/app/views/profiles/_skype.html.slim
@@ -1,3 +1,3 @@
-- if @user.profile.skype.present?
+- if policy(@target).skype?
   = link_to "skype:#{@user.profile.skype}?call" do
     = fa_icon 'skype', class: 'fa-3x social'
